bk_ida/gobmkida/g3/trymove
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/trymove/src/engine/board.c:979:51: error: use of undeclared identifier 'off_4B4C10'
*( __m128 *)dest = _mm_loadh_ps( ( const double *)off_4B4C10); 
                                                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/trymove/src/engine/board.c:980:38: error: use of undeclared identifier 'off_4B4C18'
v22 = _mm_loadh_ps( ( const double *)off_4B4C18); 
                                     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/trymove/src/engine/board.c:981:39: error: use of undeclared identifier 'off_4B4C20'
v23 = _mm_loadh_ps( ( const double *)&off_4B4C20); 
                                      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/trymove/src/engine/board.c:1017:51: error: use of undeclared identifier 'off_4B4C10'
*( __m128 *)dest = _mm_loadh_ps( ( const double *)off_4B4C10); 
                                                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/trymove/src/engine/board.c:1018:38: error: use of undeclared identifier 'off_4B4C18'
v22 = _mm_loadh_ps( ( const double *)off_4B4C18); 
                                     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/trymove/src/engine/board.c:1019:39: error: use of undeclared identifier 'off_4B4C20'
v23 = _mm_loadh_ps( ( const double *)&off_4B4C20); 
                                      ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/trymove/src/obj/1/board.o] Error 1
